--- a/frontend/src/scss/components/_message-list.scss
+++ b/frontend/src/scss/components/_message-list.scss
@@ -16,7 +16,8 @@
   display: flex;
   flex-direction: column;
   gap: 2px;
-  padding: 16px 12px 12px;
+  padding: 16px 12px;
+  padding-bottom: calc(var(--dock-h, 64px) + 8px);
 }
 
 //center empty state when there are no messages
@@ -90,7 +91,7 @@
 .msglist__jump {
   position: absolute;
   right: 12px;
-  bottom: 12px;
+  bottom: calc(var(--dock-h, 64px) + 12px);
   width: 40px;
   height: 40px;
   display: grid;
